<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/ic_menu_camera"
            android:title="@string/menu_home" />
        <item
            android:id="@+id/nav_reporte"
            android:icon="@drawable/ic_menu_gallery"
            android:title="@string/menu_reporte" />
    </group>
    <group android:checkableBehavior="single">

        <item
            android:id="@+id/nav_listar"
            android:icon="@drawable/ic_menu_manage"
            android:title="@string/menu_listar" />
    </group>

    <item android:title="Extras">
        <menu>

            <item
                android:id="@+id/nav_salir"
                android:icon="@drawable/ic_menu_send"
                android:title="@string/menu_salir" />
        </menu>
    </item>

</menu>