<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_home">

    <fragment
        android:id="@+id/nav_home"
        android:name="com.example.traz.ui.home.HomeFragment"
        android:label="@string/menu_home"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/nav_reporte"
        android:name="com.example.traz.ui.Reporte.ReporteFragment"
        android:label="@string/menu_reporte"
        tools:layout="@layout/fragment_reporte" />

    <fragment
    android:id="@+id/nav_usuarios"
    android:name="com.example.traz.ui.usuarios.UsuariosFragment"
    android:label="@string/menu_usuarios"
    tools:layout="@layout/fragment_usuarios" />


    <fragment
        android:id="@+id/nav_chofer"
        android:name="com.example.traz.ui.Chofer.ChoferFragment"
        android:label="@string/menu_chofer"
        tools:layout="@layout/fragment_usuarios" />


    <fragment
        android:id="@+id/nav_usuariosdos"
        android:name="com.example.traz.ui.usariosdos.UsuariosdosFragment"
        android:label="@string/menu_usuarios"
        tools:layout="@layout/usuariosdos_fragment" />


    <fragment
        android:id="@+id/nav_choferdos"
        android:name="com.example.traz.ui.choferdos.ChoferdosFragment"
        android:label="@string/menu_chofer"
        tools:layout="@layout/choferdos_fragment" />

    <fragment
        android:id="@+id/nav_reportedos"
        android:name="com.example.traz.ui.reportedos.reportedosFragment"
        android:label="@string/menu_reporte"
        tools:layout="@layout/reportedos_fragment" />


    <fragment
        android:id="@+id/nav_listar"
        android:name="com.example.traz.ui.listar.ListarFragment"
        android:label="@string/menu_listar"
        tools:layout="@layout/fragment_listar" />

    <fragment
        android:id="@+id/nav_salir"
        android:name="com.example.traz.ui.salir.SalirFragment"
        android:label="@string/menu_home"
        tools:layout="@layout/fragment_home" />


</navigation>