<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">>


            <LinearLayout
                android:id="@+id/alta_personal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                tools:visibility="visible">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="horizontal">

                    <ImageView
                        android:id="@+id/alta_img_user"
                        android:layout_width="400dp"
                        android:layout_height="200dp"
                        android:layout_weight="1"
                        android:background="@drawable/usuarios" />

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/alta_inp_puesto"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:inputType="none" />


                </LinearLayout>

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:layout_width="match_parent"
                    android:layout_height="80dp">

                    <com.google.android.material.textfield.TextInputLayout
                        android:id="@+id/alta_lay_tipo"
                        android:layout_width="300dp"
                        android:layout_height="wrap_content"
                        android:textColorHint="@color/borderColor"
                        app:boxStrokeColor="@color/borderColor"
                        android:hint="@string/tipo"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent">


                        <com.google.android.material.textfield.TextInputEditText
                            android:id="@+id/alta_inp_tipo"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"/>

                    </com.google.android.material.textfield.TextInputLayout>
                </androidx.constraintlayout.widget.ConstraintLayout>

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:layout_width="match_parent"
                    android:layout_height="80dp">

                    <com.google.android.material.textfield.TextInputLayout
                        android:id="@+id/alta_lay_nombre"
                        android:layout_width="300dp"
                        android:layout_height="wrap_content"
                        android:textColorHint="@color/borderColor"
                        app:boxStrokeColor="@color/borderColor"
                        android:hint="@string/nombre"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent">


                        <com.google.android.material.textfield.TextInputEditText
                            android:id="@+id/alta_inp_nombre"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"/>

                    </com.google.android.material.textfield.TextInputLayout>
                </androidx.constraintlayout.widget.ConstraintLayout>

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:layout_width="match_parent"
                    android:layout_height="80dp">

                    <com.google.android.material.textfield.TextInputLayout
                        android:id="@+id/alta_lay_paterno"
                        android:layout_width="300dp"
                        android:layout_height="wrap_content"
                        android:textColorHint="@color/borderColor"
                        app:boxStrokeColor="@color/borderColor"
                        android:hint="@string/paterno"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent">

                        <com.google.android.material.textfield.TextInputEditText
                            android:id="@+id/alta_inp_paterno"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content" />

                    </com.google.android.material.textfield.TextInputLayout>
                </androidx.constraintlayout.widget.ConstraintLayout>

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:layout_width="match_parent"
                    android:layout_height="80dp">

                    <com.google.android.material.textfield.TextInputLayout
                        android:id="@+id/alta_lay_materno"
                        android:layout_width="300dp"
                        android:layout_height="wrap_content"
                        android:textColorHint="@color/borderColor"
                        app:boxStrokeColor="@color/borderColor"
                        android:hint="@string/materno"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent">

                        <com.google.android.material.textfield.TextInputEditText
                            android:id="@+id/alta_inp_materno"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content" />

                    </com.google.android.material.textfield.TextInputLayout>
                </androidx.constraintlayout.widget.ConstraintLayout>

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:layout_width="match_parent"
                    android:layout_height="80dp">

                    <com.google.android.material.textfield.TextInputLayout
                        android:id="@+id/alta_lay_puesto"
                        android:layout_width="300dp"
                        android:layout_height="wrap_content"
                        android:hint="@string/puesto"
                        android:textColorHint="@color/borderColor"
                        app:boxStrokeColor="@color/borderColor"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent">

                    </com.google.android.material.textfield.TextInputLayout>
                </androidx.constraintlayout.widget.ConstraintLayout>

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:layout_width="match_parent"
                    android:layout_height="80dp">

                    <com.google.android.material.textfield.TextInputLayout
                        android:id="@+id/alta_lay_user"
                        android:layout_width="300dp"
                        android:layout_height="wrap_content"
                        android:textColorHint="@color/borderColor"
                        app:boxStrokeColor="@color/borderColor"
                        android:hint="@string/user"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent">

                        <com.google.android.material.textfield.TextInputEditText
                            android:id="@+id/alta_inp_user"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content" />

                    </com.google.android.material.textfield.TextInputLayout>
                </androidx.constraintlayout.widget.ConstraintLayout>

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:layout_width="match_parent"
                    android:layout_height="80dp">

                    <com.google.android.material.textfield.TextInputLayout
                        android:id="@+id/alta_lay_pwd"
                        android:layout_width="300dp"
                        android:layout_height="wrap_content"
                        android:textColorHint="@color/borderColor"
                        app:boxStrokeColor="@color/borderColor"
                        android:hint="@string/pwd"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent">

                        <com.google.android.material.textfield.TextInputEditText
                            android:id="@+id/alta_inp_pwd"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content" />

                    </com.google.android.material.textfield.TextInputLayout>
                </androidx.constraintlayout.widget.ConstraintLayout>


                <androidx.constraintlayout.widget.ConstraintLayout
                    android:layout_width="match_parent"
                    android:layout_height="80dp">

                    <com.google.android.material.textfield.TextInputLayout
                        android:id="@+id/alta_lay_estatus"
                        android:layout_width="300dp"
                        android:layout_height="wrap_content"
                        android:textColorHint="@color/borderColor"
                        app:boxStrokeColor="@color/borderColor"
                        android:hint="@string/estatus"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent">

                        <com.google.android.material.textfield.TextInputEditText
                            android:id="@+id/alta_inp_estatus"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content" />

                    </com.google.android.material.textfield.TextInputLayout>
                </androidx.constraintlayout.widget.ConstraintLayout>


            </LinearLayout>





            <LinearLayout
                android:id="@+id/alta_registrar"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                tools:visibility="visible">

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:layout_width="match_parent"
                    android:layout_height="80dp">

                    <com.google.android.material.button.MaterialButton
                        android:id="@+id/alta_btn_register"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignParentEnd="true"
                        android:layout_alignParentRight="true"
                        android:text="@string/save"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent" />
                </androidx.constraintlayout.widget.ConstraintLayout>

            </LinearLayout>
            <LinearLayout
                android:id="@+id/fetch_usuario"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                tools:visibility="visible">

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:layout_width="match_parent"
                    android:layout_height="80dp">

                    <com.google.android.material.button.MaterialButton
                        android:id="@+id/fetch_btn_usuario"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignParentEnd="true"
                        android:layout_alignParentRight="true"
                        android:text="@string/fetch_user"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent" />
                </androidx.constraintlayout.widget.ConstraintLayout>


                <androidx.constraintlayout.widget.ConstraintLayout
                    android:layout_width="match_parent"
                    android:layout_height="80dp">

                    <com.google.android.material.textfield.TextInputLayout
                        android:id="@+id/alta_lay_id"
                        android:layout_width="300dp"
                        android:layout_height="wrap_content"
                        android:textColorHint="@color/borderColor"
                        app:boxStrokeColor="@color/borderColor"
                        android:hint="@string/idusuario"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent">

                        <com.google.android.material.textfield.TextInputEditText
                            android:id="@+id/alta_inp_id"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content" />

                    </com.google.android.material.textfield.TextInputLayout>
                </androidx.constraintlayout.widget.ConstraintLayout>

            </LinearLayout>
        </LinearLayout>
    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>