<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">


            <LinearLayout
                android:id="@+id/altad_chofer"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                tools:visibility="visible"
                android:background="?android:colorBackground">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="horizontal">

                    <ImageView
                        android:id="@+id/altad_img_chofer"
                        android:layout_width="400dp"
                        android:layout_height="200dp"
                        android:layout_weight="1"
                        android:background="@drawable/conductor" />


                </LinearLayout>



                <androidx.constraintlayout.widget.ConstraintLayout
                    android:layout_width="match_parent"
                    android:layout_height="80dp">

                    <com.google.android.material.textfield.TextInputLayout
                        android:id="@+id/altacd_lay_nombre"
                        android:layout_width="300dp"
                        android:layout_height="wrap_content"
                        android:textColorHint="@color/borderColor"
                        app:boxStrokeColor="@color/borderColor"
                        android:hint="@string/nombre"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent">


                        <com.google.android.material.textfield.TextInputEditText
                            android:id="@+id/altacd_inp_nombre"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"/>

                    </com.google.android.material.textfield.TextInputLayout>
                </androidx.constraintlayout.widget.ConstraintLayout>

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:layout_width="match_parent"
                    android:layout_height="80dp">

                    <com.google.android.material.textfield.TextInputLayout
                        android:id="@+id/altacd_lay_paterno"
                        android:layout_width="300dp"
                        android:layout_height="wrap_content"
                        android:textColorHint="@color/borderColor"
                        app:boxStrokeColor="@color/borderColor"
                        android:hint="@string/paterno"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent">

                        <com.google.android.material.textfield.TextInputEditText
                            android:id="@+id/altacd_inp_paterno"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content" />

                    </com.google.android.material.textfield.TextInputLayout>
                </androidx.constraintlayout.widget.ConstraintLayout>

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:layout_width="match_parent"
                    android:layout_height="80dp">

                    <com.google.android.material.textfield.TextInputLayout
                        android:id="@+id/altacd_lay_materno"
                        android:layout_width="300dp"
                        android:layout_height="wrap_content"
                        android:textColorHint="@color/borderColor"
                        app:boxStrokeColor="@color/borderColor"
                        android:hint="@string/materno"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent">

                        <com.google.android.material.textfield.TextInputEditText
                            android:id="@+id/altacd_inp_materno"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content" />

                    </com.google.android.material.textfield.TextInputLayout>
                </androidx.constraintlayout.widget.ConstraintLayout>








                <LinearLayout
                    android:id="@+id/altacd_sp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    tools:visibility="visible">

                    <androidx.constraintlayout.widget.ConstraintLayout
                        android:layout_width="match_parent"
                        android:layout_height="80dp">

                        <fr.ganfra.materialspinner.MaterialSpinner
                            android:id="@+id/spcdEstatus"
                            android:layout_width="300dp"
                            android:layout_height="wrap_content"
                            app:boxStrokeColor="@color/borderColor"
                            app:ms_arrowColor="#03A9F4"
                            app:ms_arrowSize="20dp"
                            android:entries="@array/opciones"
                            app:ms_baseColor="@color/colorPrimary"
                            app:ms_enableFloatingLabel="false"
                            app:ms_hint="Estatus"
                            app:ms_thickness="1dp"
                            app:layout_constraintBottom_toBottomOf="parent"
                            app:layout_constraintEnd_toEndOf="parent"
                            app:layout_constraintStart_toStartOf="parent"
                            app:layout_constraintTop_toTopOf="parent"

                            />
                    </androidx.constraintlayout.widget.ConstraintLayout>

                </LinearLayout>

            </LinearLayout>


            <LinearLayout
                android:id="@+id/edit_chofer"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                tools:visibility="visible"
                android:background="?android:colorBackground">

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:layout_width="match_parent"
                    android:layout_height="80dp">

                    <com.google.android.material.button.MaterialButton
                        android:id="@+id/edit_btn_chofer"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignParentEnd="true"
                        android:layout_alignParentRight="true"
                        android:text="@string/edit_chofer"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent" />
                </androidx.constraintlayout.widget.ConstraintLayout>

            </LinearLayout>
            <LinearLayout
                android:id="@+id/delete_chofer"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                tools:visibility="visible"
                android:background="?android:colorBackground">

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:layout_width="match_parent"
                    android:layout_height="80dp">

                    <com.google.android.material.button.MaterialButton
                        android:id="@+id/delete_btn_chofer"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignParentEnd="true"
                        android:layout_alignParentRight="true"
                        android:text="@string/delete_chofer"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent" />
                </androidx.constraintlayout.widget.ConstraintLayout>

            </LinearLayout>


                <androidx.constraintlayout.widget.ConstraintLayout
                    android:layout_width="match_parent"
                    android:layout_height="80dp">

                    <com.google.android.material.textfield.TextInputLayout
                        android:id="@+id/altacd_lay_id"
                        android:layout_width="300dp"
                        android:layout_height="wrap_content"
                        android:textColorHint="@color/borderColor"
                        app:boxStrokeColor="@color/borderColor"
                        android:hint="@string/idusuario"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent">

                        <com.google.android.material.textfield.TextInputEditText
                            android:id="@+id/altacd_inp_id"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content" />

                    </com.google.android.material.textfield.TextInputLayout>
                </androidx.constraintlayout.widget.ConstraintLayout>


        </LinearLayout>
    </ScrollView>





</androidx.constraintlayout.widget.ConstraintLayout>